# football_prediction_market

./: .dockerignore  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  PLAN.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  txline-api-reference.md
.github/workflows/: ci.yml  deploy.yml
apps/indexer/: .env.example  Dockerfile  esbuild.bundle.mjs  eslint.config.mjs  package.json  tsconfig.json
apps/indexer/hooks/: extensionless.mjs
apps/indexer/prisma/: schema.prisma
apps/indexer/src/: app.module.ts  health.controller.ts  main.ts
apps/indexer/src/chain/: events-1x2.spec.ts  events.constants.ts  events.decoder.ts  events.spec.ts  events.types.ts  indexed-events.types.ts  lmsr-price.ts  log-parser.ts
apps/indexer/src/db/: db.module.ts  prisma.service.ts
apps/indexer/src/indexer/: backfill.service.ts  events.constants.ts  events.spec.ts  events.ts  events.types.ts  indexer.config.ts  indexer.module.ts  indexer.types.ts  log-parser.ts  persister.service.ts  reserve-math.ts  (+1 more)
apps/indexer/test/: app.e2e-spec.ts
apps/keeper/: .env.example  Dockerfile  package.json  tsconfig.json
apps/keeper/hooks/: register.mjs
apps/keeper/src/: config.ts  index.ts  log.ts  smoke.ts  smoke1x2.ts  smokeSeed.ts  smokeTxline.ts
apps/web/: DESIGN_SPEC.md  Dockerfile  next.config.mjs  package.json
infra/: README.md  cdk.json  package-lock.json  package.json  tsconfig.json
infra/lib/: cicd-stack.ts  data-stack.ts  indexer-service-stack.ts  keeper-service-stack.ts  network-stack.ts  registry-stack.ts  web-service-stack.ts
libs/idl/: package.json  tsconfig.json
libs/idl/scripts/: codegen.mjs
libs/shared/: package.json  tsconfig.json
libs/shared/src/: constants.ts  errors.ts  index.ts  pda.ts
plans/: SPEC.md  SPEC.uk.md  anchor-programs-plan.md  aws-cicd.md  backend-plan.md  frontend-plan.md  leverage-v1.md  monorepo-setup.md  refactor-lmsr-canonical.md  resolve-1x2.md
programs/amm/: Cargo.toml
programs/amm/idls/: README.md
programs/amm/src/: constants.rs  error.rs  fee.rs  funding.rs  instructions.rs  lib.rs  lmsr.rs  math.rs  state.rs  txline_types.rs
programs/amm/src/fee/: tests.rs
programs/amm/src/instructions/: activate_market.rs  activate_market_1x2.rs  buy.rs  buy_1x2.rs  close_leverage.rs  close_market.rs  close_market_1x2.rs  create_market_config.rs  create_market_config_1x2.rs  deposit_lp.rs  expire_position.rs  freeze_market.rs  freeze_market_1x2.rs  init_leverage_pool.rs  init_market.rs  init_market_1x2.rs  initialize_config.rs  mint_set.rs  mint_set_1x2.rs  open_leverage.rs  open_lp_account.rs  open_position.rs  open_position_1x2.rs  post_mark.rs  redeem.rs  redeem_1x2.rs  redeem_set.rs  redeem_set_1x2.rs  request_withdraw.rs  resolve.rs  resolve_1x2.rs  sell.rs  sell_1x2.rs  set_risk_valve.rs  update_leverage_params.rs  withdraw_lp.rs
programs/amm/src/instructions/resolve/: predicate.rs  predicate_1x2.rs  tests.rs
programs/amm/src/lmsr/: tests.rs
programs/amm/src/math/: tests.rs
scripts/: close-market.ts  deploy-devnet.sh  devnet-init.ts  enable-leverage.ts  full-circle.ts  fund-usdt.ts  leverage-circle.ts  package.json  seed-markets-1x2.ts  seed-markets.ts  tsconfig.json  txline-token.ts
tests/: Cargo.toml
tests/mock-txoracle/: Cargo.toml
tests/mock-txoracle/src/: lib.rs
tests/src/: amm_tests.rs  common.rs  leverage_tests.rs  lib.rs  onextwo_tests.rs  phase2_tests.rs
tests/surfpool/: package.json  run.ts  tsconfig.json
(+104 files in other folders)
