[workspace]
members = [
    "programs/*",
    "tests",
    # LiteSVM-only mock of the TxLINE oracle (test fixture; built to .so with
    # `cargo build-sbf --manifest-path tests/mock-txoracle/Cargo.toml`,
    # deliberately OUTSIDE programs/ so `anchor build` never touches it).
    "tests/mock-txoracle",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
